# qfs-mapred

./: .autotools  .cproject  .project  Makefile  Makefile.in  NEWS  README  README.md  cleanup.sh  config.status  configure  configure.ac
DEBIAN/: control  qfs-mapred-build.sh
example/: wordcount.sh
scripts/: mapper.py  wordcount-reducer.py
src/: Makefile.am  Makefile.in  kvsorter_main.cc  mapper_spill_checker.hpp  mapper_to_qfs_partitions_main.cc  mapper_worker_main.cc  qfs_atomic_writer.hpp  qfs_mapred_submit_main.cc  reducer_worker_main.cc  shared_mapper_data.cc  shared_queue.hpp  sorter_worker_main.cc
src/headers/: kv_struct.h  mapper_data_struct.h  workloads.h
tool/: qfs-fabfile.py  qfs-mapred_fabfile.py
